5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1807_2567.log
== TEST (2019-06-13 06:48:19) 
-- CODE:
from numpy import*

x=int(input(""))
w="*"

for i in range(x):
	print(w*(x-i))
	
for i in range(x):
	print(w*(1+i))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:50:25) 
-- CODE:
x = int(input(""))
y = "*"

for i in range(x):
	print(w*(i-x))
	
for i in range(x)
	print(w*(i+x))
-- ERROR:
File "XXXX", line 7
    for i in range(x)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:50:31) 
-- CODE:
x = int(input(""))
y = "*"

for i in range(x):
	print(w*(i-x))
	
for i in range(x):
	print(w*(i+x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(w*(i-x))
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:50:34) 
-- CODE:
x = int(input(""))
y = "*"

for i in range(x):
	print(w*(i-x))
	
for i in range(x):
	print(w*(i+x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(w*(i-x))
NameError: name 'w' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:50:40) 
-- CODE:
x = int(input(""))
y = "*"

for i in range(x):
	print(y*(i-x))
	
for i in range(x):
	print(y*(i+x))
-- OUTPUT:
********
*********
**********
***********
************
*************
**************
***************
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 06:51:11) 
-- CODE:
x = int(input(""))
y = "*"

for i in range(x):
	print(y*(x-i))
	
for i in range(x):
	print(y*(1+i))
-- OUTPUT:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 06:55:21) 
-- CODE:
x = int(input(""))
y = "*"

for i in range(x):
	print(y*(x-i))
	
for i in range(x):
	print(y*(1+i))
-- EXECUTION TIME:
0.732805
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
